--- a/index.css
+++ b/index.css
@@ -90,6 +90,7 @@ ul {
 .nav__links {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .nav__link {
@@ -153,11 +154,14 @@ ul {
 /* MOBILE NAVIGATION */
 
 .btn__menu {
-  background-color: transparent;
+  background: transparent;
+  position: absolute;
+  right: 1em;
   font-size: 36px;
   text-align: center;
   border: none;
   color: rgb(36, 62, 99);
+  display: none;
 }
 
 .menu__backdrop {
@@ -200,6 +204,7 @@ ul {
   border-radius: 9999px;
   color: #f7fafc;
   padding: 12px 36px;
+  margin-bottom: 1em;
   transition: all 300ms ease;
 }
 
@@ -881,6 +886,9 @@ ul {
 @media (max-width: 928px) {
   .nav__link {
     display: none;
+  }
+  .btn__menu {
+    display: block;
   }
 }
 
