--- a/index.css
+++ b/index.css
@@ -462,7 +462,7 @@ ul {
 }
 
 .steps__description--wrapper {
-  width: 50%;
+  width: 60%;
   padding: 0px 12px 12px 12px;
 }
 
@@ -497,12 +497,7 @@ ul {
   margin-right: 120px;
 }
 
-.values__img--wrapper {
-  width: 30%;
-}
-
 .values__img {
-  display: flex;
   width: 100%;
 }
 
@@ -1065,11 +1060,172 @@ footer {
   background-color: rgb(203, 213, 224);
 }
 
+@media (max-width: 1280px) {
+
+  .landing__info--header {
+    font-size: 42px;
+  }
+  .landing__info--subheader {
+    font-size: 18px;
+  }
+  .landing__img {
+    max-width: 500px;
+  }
+  .landing__info--wrapper {
+    width: 45%;
+  }
+  .landing__img--wrapper {
+    width: 55%;
+  }
+  .landing__img--wrapper figure {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .text__input {
+    font-size: 14px;
+  }
+  .input__button {
+    padding: 8px 28px;
+    margin-left: 24px;
+  }
+
+}
+
 @media (max-width: 928px) {
+
+  .section__subtitle {
+    font-size: 40px;
+  }
+
   .nav__link {
     display: none;
   }
   .btn__menu {
     display: block;
+  }
+  .menu__backdrop {
+    margin-right: 32px;
+    margin-left: 32px;
+    bottom: 50%;
+  }
+
+  .landing__info--header {
+    font-size: 32px;
+    text-align: center;
+  }
+  .landing__info--subheader {
+    font-size: 16px;
+    text-align: center;
+    word-spacing: 1px;
+    width: 90%;
+    align-self: center;
+  }
+  .landing__customer--title {
+    text-align: center;
+  }
+  .landing__customer--img {
+    align-self: center;
+  }
+  .landing__img {
+    max-width: 1200px;
+  }
+  .landing__wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  .landing__info--wrapper {
+    width: 75%;
+    margin-bottom: 48px;
+  }
+  .text__input {
+    width: 80%;
+  }
+  .input__wrapper {
+    display: flex;
+    justify-content: center;
+  }
+  .input__button {
+    margin: 8px 80px 8px 0;
+  }
+  .text__input {
+    font-size: 16px;
+  }
+
+  .service {
+    width: calc(100% / 2);
+  }
+
+  .quality__img--wrapper {
+    display: flex;
+    align-items: center;
+    max-width: 400px;
+  }
+  .quality__btn {
+    width: 40%;
+  }
+
+  .steps__subtitle {
+    font-size: 40px;
+  }
+  .steps__number {
+    padding-left: 0;
+  }
+  .steps__description--wrapper {
+    width: 80%;
+  }
+
+  .values__title {
+    font-size: 40px;
+  }
+  .values__img---wrapper {
+    display: flex;
+    align-self: center;
+  }
+  .values__img {
+    max-width: 500px;
+  }
+  .values__info--description--wrapper {
+    flex-direction: column;
+    margin-bottom: 24px;
+  }
+  .values__description--wrapper {
+    margin-right: 60px;
+    width: 60%;
+  }
+  .values__info--wrapper {
+    margin-bottom: 24px;
+    width: 80%;
+  }
+  .values__description--info {
+    line-height: 2rem;
+  }
+  .values__description {
+    margin-bottom: 40px;
+  }
+
+  .pricing__subtitle {
+    font-size: 18px;
+    width: 60%;
+  }
+  .plans {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .plan {
+    margin-right: 0;
+    width: 45%;
+  }
+
+  .testimonials__img--wrapper {
+    display: flex;
+    align-self: center;
+  }
+  .testimonials__img {
+    padding: 0;
+  }
+  .testimonials__description--wrapper {
+    padding-right: 0;
   }
 }
